Fixing bug 83332. Event listeners registerd with the DOM method addEventListener were being executed on the wrong context, often on the safe context (i.e. the hidden window context), this causes potential security problems and problems in cases where we use the context for figuring out the base URI when resolving relative URL's n' such... r=joki@netscape.com, sr=hyatt@netscape.com, a=drivers@mozilla.org.